# Toy-Engine-Plugin-Loader

./: .gitignore  CMakeLists.txt  LICENSE.md  OUTLINE  README.md  build_modules.bat  module_configuration.ini
include/: glEventChannel.h  glEventQueue.h  glModule.h  glPluginLoader.h  glTaskManager.h
include/client/: glModule.h
modules/: glAudio.cpp  glAudio.h  glInput.cpp  glInput.h  glVideo.cpp  glVideo.h
src/: glEntry.cpp  glModule.cpp  glPluginLoader.cpp
